--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 }
 
 form {
-    background-color: #4654e1;
+    background-color: navy;
     width: 300px;
     height: 44px;
     border-radius: 5px;
