--- a/style.css
+++ b/style.css
@@ -85,7 +85,9 @@ svg {
 body {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    font-family: sans-serif;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .five-day-text {
@@ -94,4 +96,44 @@ body {
     margin: 0px;
     padding: 0px;
     font-family: sans-serif;
+}
+
+.favorable {
+    background-color: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+}
+
+.moderate {
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+}
+
+.severe {
+    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+}
+
+#uv-index {
+    text-align: center;
+    font-size: 12px;
+    font-weight: 600;
+    font-family: sans-serif;
+}
+
+.icon {
+    height: 25px;
+    width: 25px;
+    margin-left: -5px;
 }
